# stereo_testbed

./: CMakeCache.txt  CMakeLists.txt  Point2CloudRpicams.rviz  README.md  package.xml
msg/: cameraTransformation.msg  vectorOfPoints.msg
scripts/: parametricCurveFitting.py  parametricCurveFitting.py.autosave  random_pub.py  visualize.py
src/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  camera_pub.cpp  camera_sub.cpp  dataanalysis.cpp  diffequations.cpp  extrinsicCalibration.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  interpolator.cpp  linalg.cpp  optimization.cpp  skeleton.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp  tcptracker.cpp
